Refectored all codes 🙌

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
         "quotes": [2, "double"],
         "semi": [2, "always"],
         "comma-dangle": 0,
-        "space-before-function-paren": 0
+        "space-before-function-paren": 0,
+        "indent": 0
     }
 }
