Updated version in package.json 📦

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # Logs
-./lib
 logs
 *.log
 npm-debug.log*
@@ -41,6 +40,7 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+lib/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
