--- a/examples/node-mongodb-api-ts/package.json
+++ b/examples/node-mongodb-api-ts/package.json
@@ -2,9 +2,9 @@
   "name": "node-mongodb-api-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "build",
   "scripts": {
-    "start": "node -r esm ./src/index.js",
+    "start": "node ./build",
     "build": "tsc -p .",
     "serve": "nodemon"
   },
